MedicalRepresentativeSchedule Microservice/MedicalRepresentativeSchedule Microservice/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "pharmacymedsupply-cf36"
    labels:
        app: "pharmacymedsupply-cf36"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "pharmacymedsupply-cf36"
