MedicalRepresentativeSchedule Microservice/MedicalRepresentativeSchedule Microservice/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "medicalrepresentativeschedule-1196"
    labels:
        app: "medicalrepresentativeschedule-1196"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: medicalrepresentativeschedule-medicalrepresentativeschedule-1196.3fe47a010bad48298e43.centralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "medicalrepresentativeschedule-1196"
                servicePort: 80
